# signpost

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  config.json
.github/workflows/: build.yml  release.yml
include/: config.hpp
include/handler/: handshake.hpp  login.hpp  status.hpp
include/network/: client.hpp  server.hpp
include/protocol/: buffer.hpp  packet.hpp
src/: config.cpp  main.cpp
src/handler/: handshake.cpp  login.cpp  status.cpp
src/network/: client.cpp  server.cpp
src/protocol/: buffer.cpp  packet.cpp
